# invenio-s3

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: conf.py
invenio_s3/: __init__.py  config.py  ext.py  helpers.py  storage.py  version.py
tests/: conftest.py  test_invenio_s3.py  test_storage.py
