# -*- coding: utf-8 -*-
#
# Copyright (C) 2018 Esteban J. G. Gabancho.
# Copyright (C) 2022 Graz University of Technology.
# Copyright (C) 2024 KTH Royal Institute of Technology.
#
# Invenio-S3 is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-s3
version = attr: invenio_s3.__version__
description = "S3 file storage support for Invenio. "
long_description = file: README.rst, CHANGES.rst
keywords = invenio s3
license = MIT
author = Esteban J. G. Gabancho
author_email = egabancho@gmail.com
platforms = any
url = https://github.com/inveniosoftware/invenio-s3
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    boto3>=1.9.91
    invenio-files-rest>=1.3.0
    s3fs>=0.3.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.2
    invenio-base>=1.2.5
    invenio-app>=1.3.1
    invenio-db>=1.0.9
    moto>=1.3.7
    mock>=4.0.0
    redis>=2.10.5
    Sphinx>=4.2.0

[options.entry_points]
invenio_base.api_apps =
    invenio_s3 = invenio_s3:InvenioS3
invenio_base.apps =
    invenio_s3 = invenio_s3:InvenioS3

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_s3 --cov-report=term-missing
testpaths = tests invenio_s3
